# Clawsum

./: .gitattributes  .gitignore  IMPLEMENTATION-PLAN.md  README.md
deploy/: docker-compose.yml  env.example  env.ghl.example  env.gmail.example  env.openrouter-voice.example  prometheus.yml  setup-migrate.sh
deploy/config/: ghl-accounts.instance.rei.example.json  ghl-accounts.json
deploy/docs/: AI-PERSONA-OS.md  BOSS-ACCESS-GUIDE.md  BOSS-OBSIDIAN-WINDOWS.md  BOSS-OPS-PORTAL.md  BOSS-UI-AND-MONITORING.md  BOSS-UI-PUBLIC-DOMAIN.md  CEO-COCKPIT.md  CEO-OVERWATCH.md  CHATGPT-ARCHIVE.md  CREDENTIALS-EXCLUSION.md  DATA-ARCADEDB-VS-POSTGRES.md  DOMAIN-MAP.md  GHL-AGENT-CAPABILITIES.md  GHL-MULTI-ACCOUNT-PLAN.md  GMAIL-ADMIN-SETUP.md  HERMES-OPENCLAW-ROUTING.md  HERMES-POLICY.md  LLM-ROUTING.md  MASTER-TASK-LIST.md  OBSIDIAN-VAULT.md  OPENAI-AUTH.md  OPENROUTER-AND-VOICE.md  OVERWATCH-CRM.md  PAPERCLIP-OVERWATCH.md  PAPERCLIP-SETUP.md  PLATFORM-DEPLOY-TEMPLATE.md  PLATFORM-MASTER-REPORT.md  RESUME-POLICY.md  SETUP-REMAINING.md  STATUS-REPORT-2026-07-08.md  VERSION-PINNING.md
deploy/examples/: tasks.example.json
deploy/langgraph/: Dockerfile  langgraph.json  pyproject.toml  server.py
deploy/langgraph/graphs/: gmail_triage.py  research_brief.py
deploy/postgres-init/: 01-databases.sql  02-schemas-main.sql  03-schemas-realestate.sql  04-schemas-ghl.sql  05-ops-email.sql  06-ops-reminders.sql  07-ghl-account-schemas.sql  07b-ghl-multi-account-schemas.instance.example.sql  08-ghl-audit-tables.sql  09-ghl-strategic-tables.sql  10-ghl-suggested-sms.sql  12-overwatch.sql  (+3 more)
(+220 files in other folders)
