[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clawsum-langgraph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.60",
  "langchain-core>=0.3.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphs*"]
